--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 google-genai
-ortools==9.14.6206
+ortools
 supabase==2.3.5
+httpx==0.25.2
+httpcore==0.17.3
 python-dotenv
 fastapi==0.115.0
-uvicorn
-
+uvicorn==0.32.1
