--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 google-genai
 ortools
 supabase==2.4.0
+httpx[http2]==0.27.2
+httpcore==1.0.5
+h2==4.1.0
+hpack==4.0.0
+hyperframe==6.0.1
 python-dotenv
 fastapi==0.115.0
 uvicorn==0.32.1
