--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,24 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "dev": "vite",
         "build": "vite build",
-        "dev": "vite"
+        "preview": "vite preview",
+        "test": "vitest"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
-        "@vitejs/plugin-vue": "^6.0.1",
+        "@vitejs/plugin-vue": "^6.0.2",
+        "@vue/test-utils": "^2.4.6",
         "autoprefixer": "^10.4.21",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
+        "jsdom": "^27.2.0",
         "laravel-vite-plugin": "^2.0.1",
         "postcss": "^8.5.6",
         "tailwindcss": "^3.4.18",
-        "vite": "^7.1.9"
+        "vite": "^7.1.9",
+        "vitest": "^4.0.14"
     },
     "dependencies": {
         "@supabase/supabase-js": "^2.76.1",
